# stop-learn

./: .gitignore  CMakeLists.txt  README.md  board.c  board.cpp  board.h  board_state.c  board_state.cpp  board_state.h  main.c  main.cpp  moving.cpp  moving.h  position.c  position.cpp  position.h
scoring/: controller.cpp  controller.h  floodFill.cpp  floodFill.h  manhattan.cpp  manhattan.h  scoring.h
